Fixes sidebar whitespace issue  (#69)
* Fixes sidebar whitespace issue by defining margin of 0 for first element of each page.

* Now scrolls to top of screen upon clicking link

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,6 +3,14 @@ p {
     padding: 0;
 }
 
+.text a {
+    color: #acf39d;
+}
+
+.text a:hover {
+    color: #3cdd1b;
+}
+
 #footer-container {
     width: 100%;
     text-align: center;
