--- a/front-end/src/TermsOfService.css
+++ b/front-end/src/TermsOfService.css
@@ -1,3 +1,7 @@
+h1 {
+    margin-top: 0;
+    padding: 0;
+}
 
 .header {
     font-size: 32px;
